# ITR-tool

./: .buildinfo  .gitignore  CONTRIBUTING.md  DataRequirements.html  FunctionalOverview.html  LICENSE  Legends.html  PN_test.py  README.md  contributing.html  genindex.html  getting_started.html  index.html  intro.html  licenses_overview.md  links.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  rest_api.html  search.html  searchindex.js  setup.py  terms.html  unittest.cfg  utils.py
.doctrees/: DataRequirements.doctree  FunctionalOverview.doctree  Legends.doctree  contributing.doctree  terms.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/SBTi/configs/: index.doctree
.doctrees/autoapi/SBTi/data/bloomberg/: index.doctree
.doctrees/autoapi/SBTi/data/cdp/: index.doctree
.doctrees/autoapi/SBTi/data/data_provider/: index.doctree
.doctrees/autoapi/SBTi/data/excel/: index.doctree
.doctrees/autoapi/SBTi/data/msci/: index.doctree
.doctrees/autoapi/SBTi/interfaces/: index.doctree
.doctrees/autoapi/SBTi/portfolio_aggregation/: index.doctree
.doctrees/autoapi/SBTi/portfolio_coverage_tvp/: index.doctree
.github/workflows/: docs2pages.yaml
ITR/: __init__.py  configs.py  interfaces.py  portfolio_aggregation.py  portfolio_coverage_tvp.py  target_validation.py  target_validation1.5.py  temperature_score.py  utils.py
ITR/data/: bloomberg.py  cdp.py  csv.py  excel.py  inmemory.py  iss.py  msci.py  sbti.py  trucost.py  urgentem.py
ITR/inputs/: AR6_regression_model.json  SR15_regression_model.json  current-Companies-Taking-Action.xlsx
_autoapi_templates/: index.html
_downloads/d16600f8589c0c47112a7407bd6f0c23/: DataProviderTemplate.xlsx
_downloads/e074ef679dd2f251bbab75d5ccc6220d/: ITR 1.5 Data Legends.xlsx
_sources/: FunctionalOverview.rst.txt  Legends.rst.txt  getting_started.rst.txt  index.rst.txt  intro.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/ITR/: index.rst.txt
_sources/autoapi/ITR/configs/: index.rst.txt
_sources/autoapi/ITR/data/: index.rst.txt
_sources/autoapi/ITR/data/bloomberg/: index.rst.txt
_sources/autoapi/ITR/data/cdp/: index.rst.txt
_sources/autoapi/ITR/interfaces/: index.rst.txt
_sources/autoapi/ITR/portfolio_aggregation/: index.rst.txt
_sources/autoapi/ITR/portfolio_coverage_tvp/: index.rst.txt
_sources/autoapi/ITR/target_validation/: index.rst.txt
_sources/autoapi/ITR/temperature_score/: index.rst.txt
_sources/autoapi/ITR/utils/: index.rst.txt
_static/: theme_overrides.css
autoapi/: index.html
autoapi/ITR/: index.html
autoapi/ITR/configs/: index.html
autoapi/ITR/data/: index.html
autoapi/ITR/data/bloomberg/: index.html
autoapi/ITR/data/cdp/: index.html
autoapi/ITR/data/csv/: index.html
autoapi/ITR/data/data_provider/: index.html
autoapi/ITR/data/excel/: index.html
autoapi/ITR/data/inmemory/: index.html
autoapi/ITR/data/iss/: index.html
autoapi/ITR/data/msci/: index.html
autoapi/ITR/data/sbti/: index.html
autoapi/ITR/data/trucost/: index.html
autoapi/ITR/data/urgentem/: index.html
autoapi/ITR/interfaces/: index.html
autoapi/ITR/portfolio_aggregation/: index.html
autoapi/ITR/portfolio_coverage_tvp/: index.html
autoapi/ITR/target_validation/: index.html
autoapi/ITR/temperature_score/: index.html
autoapi/ITR/utils/: index.html
autoapi/SBTi/: index.html
autoapi/SBTi/data/: index.html
autoapi/SBTi/data/bloomberg/: index.html
autoapi/SBTi/data/data_provider/: index.html
autoapi/SBTi/data/iss/: index.html
autoapi/SBTi/data/msci/: index.html
autoapi/SBTi/data/sbti/: index.html
autoapi/SBTi/data/urgentem/: index.html
autoapi/SBTi/portfolio_aggregation/: index.html
autoapi/SBTi/target_validation/: index.html
autoapi/SBTi/utils/: index.html
data/: example_portfolio.csv
docs/: DataProviderTemplate.xlsx  DataRequirements.rst  FunctionalOverview.rst  ITR 1.5 Data Legends.xlsx  Legends.rst  PortfolioTemplate.csv  conf.py  contributing.rst  getting_started.rst  index.rst  intro.rst  links.rst  terms.rst
docs/docs/: getting_started.rst  index.rst
examples/: 1_analysis_example.ipynb  2_quick_temp_score_calculation.ipynb  3_what-if-analysis.ipynb  4_portfolio_aggregations.ipynb  4b_portfolio_agg_readymade_TS.ipynb  5_reporting.ipynb  environment.yml  requirements.txt  utils.py
examples/data/: data_provider_example.xlsx  example_portfolio.csv
gh-pages/: Legends.html  contributing.html  genindex.html  index.html  links.html  py-modindex.html  search.html  searchindex.js
gh-pages/.doctrees/: environment.pickle  getting_started.doctree  index.doctree  intro.doctree  links.doctree  rest_api.doctree
gh-pages/.doctrees/_autoapi_templates/: index.doctree
gh-pages/.doctrees/autoapi/SBTi/: index.doctree
gh-pages/_autoapi_templates/: index.html
gh-pages/autoapi/: index.html
gh-pages/autoapi/SBTi/configs/: index.html
gh-pages/autoapi/SBTi/data/: index.html
gh-pages/autoapi/SBTi/interfaces/: index.html
gh-pages/autoapi/SBTi/portfolio_coverage_tvp/: index.html
gh-pages/autoapi/SBTi/temperature_score/: index.html
test/: test_e2e.py  test_edge_cases.py  test_portfolio_coverage_tvp.py  test_temperature_score.py
test/data/: test_inmemory_data.py  test_sbti_data.py  test_waterfall.py
test/inputs/: data_test_local_CTA.xlsx  data_test_temperature_score.csv  test_CTA.xlsx
(+29 files in other folders)
