[tool.poetry]
name = "wwf-finance-tool"
version = "0.9.0"
description = "This package helps companies and financial institutions to assess the temperature alignment of current targets, commitments, and investment and lending portfolios, and to use this information to develop targets for official validation by the SBTi.'"
authors = ["wwf <ekonomi-finans@wwf.se>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",

]
keywords = ['Climate', 'SBTi', 'Finance', 'WWF']
packages = [{ include = "ITR" }]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/WWF-Sweden/ITR-tool/issues"
"Documentation" = 'https://wwf-sweden.github.io/ITR-tool'
"Source Code" = "https://github.com/WWF-Sweden/ITR-tool/issues"


[tool.poetry.dependencies]
python = "^3.9,<4"
pydantic = "1.10.8"
six = "1.16.0"
pandas = "1.5.3"
xlrd = "2.0.1"
requests = "2.31.0"
openpyxl = "3.1.2"
cleo = "^2.0.3"
sphinx = "^4.3.2"
sphinx-rtd-theme = "^0.5.2"


[tool.poetry.dev-dependencies]
black = "21.10b0"
pylint = "^2.10.2"
ipykernel = "6.5.0"
Sphinx = "4.3.2"
sphinx-autoapi = "1.8.4"
sphinx-rtd-theme = "0.5.2"

[tool.pyright]
venv = ".venv"
