[tool.poetry]
name = "WWF-ITR"
version = "1.5.3"
description = "This package helps companies and financial institutions to assess the temperature alignment of current climate reduction targets and commitments for investment and lending portfolios. The tool can also be used to develop targets for official validation by the SBTi.'"
authors = ["wwf <ekonomi-finans@wwf.se>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",

]
keywords = ['Climate', 'ITR', 'SBTi', 'Finance', 'WWF']
packages = [{ include = "ITR" }]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/WWF-Sweden/ITR-tool/issues"
"Documentation" = 'https://wwf-sweden.github.io/ITR-tool'
"Source Code" = "https://github.com/WWF-Sweden/ITR-tool/issues"


[tool.poetry.dependencies]
python = "^3.10"
pydantic = ">=2.0,<2.12"
six = "^1.16.0"
pandas = "2.2.2"
xlrd = "2.0.1"
requests = "2.32.4"
openpyxl = "3.1.2"
numpy = ">=1.26,<2.1"
cleo = "^2.0.3"
xlsxwriter = "^3.0.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.2,<8.0"
sphinx-autoapi = ">=3.4,<4.0"
sphinx-rtd-theme = ">=2.0,<3.0"
astroid = ">=3.0,<4.0"

[tool.poetry.group.dev.dependencies]
black = "21.10b0"
pylint = "^3.1"
ipykernel = "6.5.0"

[tool.pyright]
venv = ".venv"
